05_03_2025 TARJETAS DE REPORTE MODIFICADAS EN DISEÑO SOLO BORDES SIN VOLOR

--- a/src/app/Ui/Modules/reportes/components/design-reporte/design-report-inventario/design-report-inventario.component.html
+++ b/src/app/Ui/Modules/reportes/components/design-reporte/design-report-inventario/design-report-inventario.component.html
@@ -24,96 +24,90 @@
   >
     <div class="grid grid-cols-3 gap-8 w-full max-w-3xl mx-auto">
       <button
-        class="bg-blue-100 p-6 rounded-xl shadow-md hover:bg-blue-200 transition cursor-pointer text-center border border-blue-300 flex flex-col items-center"
-        type="button"
-        data-bs-toggle="offcanvas"
-        data-bs-target="#disenoreportedata"
-        aria-controls="offcanvasRight"
-        (click)="ObtenerDetalleInventariosPDF(0, 2)"
-      >
-        <mat-icon class="text-blue-500 text-5xl leading-none w-auto h-auto mb-3"
-          >list_alt</mat-icon
-        >
-        <p class="text-blue-700 font-semibold">Total de registros</p>
-        <p class="text-lg font-bold text-blue-900">{{ TotalRegistros }}</p>
-      </button>
+      class="bg-white p-6 rounded-xl shadow-md border-2 border-[#20477E]
+             hover:bg-[#F0F4FA] transition-colors duration-200 cursor-pointer
+             text-center flex flex-col gap-4 justify-center items-center"
+      type="button"
+      data-bs-toggle="offcanvas"
+      data-bs-target="#disenoreportedata"
+      aria-controls="offcanvasRight"
+      (click)="ObtenerDetalleInventariosPDF(0, 2)"
+    >
+      <p class="text-[#20477E] font-semibold">Total de registros</p>
+      <p class="text-[3rem] font-bold text-[#20477E]">{{ TotalRegistros }}</p>
+    </button>
+
+
 
       <button
-        class="bg-red-100 p-6 rounded-xl shadow-md hover:bg-red-200 transition cursor-pointer text-center border border-red-300 flex flex-col items-center"
+      class="bg-white p-6 rounded-xl shadow-md border-2 border-[#00D1AE]
+      hover:bg-[#F0F4FA] transition-colors duration-200 cursor-pointer
+      text-center flex flex-col gap-4 justify-center items-center"
         type="button"
         data-bs-toggle="offcanvas"
         data-bs-target="#disenoreportedata"
         aria-controls="offcanvasRight"
         (click)="ObtenerDetalleInventariosPDF(3, 0)"
       >
-        <mat-icon class="text-red-500 text-5xl leading-none w-auto h-auto mb-3"
-          >error_outline</mat-icon
-        >
-        <p class="text-red-700 font-semibold text-center">
+        <p class="text-[#00D1AE] font-semibold text-center">
           Registros con faltantes
         </p>
-        <p class="text-lg font-bold text-red-900">{{ RegistrosFaltantes }}</p>
+        <p class="text-[3rem] font-bold text-[#00D1AE]">{{ RegistrosFaltantes }}</p>
       </button>
 
       <button
-        class="bg-green-100 p-6 rounded-xl shadow-md hover:bg-green-200 transition cursor-pointer text-center border border-green-300 flex flex-col items-center"
+      class="bg-white p-6 rounded-xl shadow-md border-2 border-[#0158DD]
+      hover:bg-[#F0F4FA] transition-colors duration-200 cursor-pointer
+      text-center flex flex-col gap-4 justify-center items-center"
         type="button"
         data-bs-toggle="offcanvas"
         data-bs-target="#disenoreportedata"
         aria-controls="offcanvasRight"
         (click)="ObtenerDetalleInventariosPDF(2, 0)"
       >
-        <mat-icon
-          class="text-green-500 text-5xl leading-none w-auto h-auto mb-3"
-          >check_circle_outline</mat-icon
-        >
-        <p class="text-green-700 font-semibold text-center">
+        <p class="text-[#0158DD] font-semibold text-center">
           Registros sin faltantes
         </p>
-        <p class="text-lg font-bold text-green-900">
+        <p class="text-[3rem] font-bold text-[#0158DD]">
           {{ RegistrosNoFaltantes }}
         </p>
       </button>
 
       <button
-        class="bg-yellow-100 p-6 rounded-xl shadow-md hover:bg-yellow-200 transition cursor-pointer text-center border border-yellow-300 flex flex-col items-center"
+      class="bg-white p-6 rounded-xl shadow-md border-2 border-[#0158DD]
+      hover:bg-[#F0F4FA] transition-colors duration-200 cursor-pointer
+      text-center flex flex-col gap-4 justify-center items-center"
         data-bs-toggle="offcanvas"
         data-bs-target="#disenoreportedata"
         aria-controls="offcanvasRight"
         (click)="ObtenerDetalleInventariosPDF(0, 1)"
       >
-        <mat-icon
-          class="text-yellow-500 text-5xl leading-none w-auto h-auto mb-3"
-          >add_circle_outline</mat-icon
-        >
-        <p class="text-yellow-700 font-semibold text-center">
+        <p class="text-[#0158DD] font-semibold text-center">
           Nuevos registros
         </p>
-        <p class="text-lg font-bold text-yellow-900">{{ NuevosRegistros }}</p>
+        <p  class="text-[3rem] font-bold text-[#0158DD]">{{ NuevosRegistros }}</p>
       </button>
 
       <button
-        class="bg-purple-100 p-6 rounded-xl shadow-md hover:bg-purple-200 transition cursor-pointer text-center border border-purple-300 flex flex-col items-center"
+      class="bg-white p-6 rounded-xl shadow-md border-2 border-[#20477E]
+      hover:bg-[#F0F4FA] transition-colors duration-200 cursor-pointer
+      text-center flex flex-col gap-4 justify-center items-center"
         data-bs-toggle="offcanvas"
         data-bs-target="#disenoreportedata"
         aria-controls="offcanvasRight"
         (click)="ObtenerDetalleInventariosPDF(1, 2)"
       >
-        <mat-icon
-          class="text-purple-500 text-5xl leading-none w-auto h-auto mb-3"
-          >playlist_add_check</mat-icon
-        >
-        <p class="text-purple-700 font-semibold text-center">Conteos exactos</p>
-        <p class="text-lg font-bold text-purple-900">{{ ConteosExactos }}</p>
+        <p class="text-[#20477E] font-semibold text-center">Conteos exactos</p>
+        <p class="text-[3rem] font-bold text-[#20477E]">{{ ConteosExactos }}</p>
       </button>
 
       <button
-        class="bg-gray-100 p-6 rounded-xl shadow-md transition text-center border border-gray-300 flex flex-col items-center opacity-50 cursor-not-allowed"
+      class="bg-gray-100 p-6 rounded-xl shadow-md border-2 border-gray-300
+     transition duration-200 cursor-not-allowed
+      text-center flex flex-col gap-4 justify-center items-center"
+
         disabled
       >
-        <mat-icon class="text-gray-400 text-5xl leading-none w-auto h-auto mb-3"
-          >visibility_off</mat-icon
-        >
         <p class="text-gray-600 font-semibold text-center">
           Registros sin leer
         </p>
