05_03_2025 ADD TITULOS PARA CADA CASO SELECCIONADO EN EL REPORTE

--- a/src/app/Ui/Modules/reportes/components/design-reporte/design-report-inventario/design-report-inventario.component.html
+++ b/src/app/Ui/Modules/reportes/components/design-reporte/design-report-inventario/design-report-inventario.component.html
@@ -139,14 +139,19 @@
               class="flex flex-col md:justify-start md:items-center gap-0.5 md:gap-1"
             >
               <div class="flex justify-between w-full">
-                <button
-                  class="text-gray-800 hover:text-gray-600"
+                <div class="flex items-center justify-center gap-4">
+                  <button
+                  class="text-gray-800 hover:text-gray-600 "
                   data-bs-toggle="offcanvas"
                   data-bs-target="#disenoreporte"
                   aria-controls="offcanvasRight"
                 >
                   <mat-icon>chevron_left</mat-icon>
+
                 </button>
+                <h1 class="mb-2">{{titulosOpciones}}</h1>
+                </div>
+
                 <div class="container-datos">
                   <div class="apartado-filtros">
                     <div class="opciones">
