--- a/src/app/Ui/Modules/Dashboard/Components/header-dashboard/header-dashboard.component.html
+++ b/src/app/Ui/Modules/Dashboard/Components/header-dashboard/header-dashboard.component.html
@@ -16,6 +16,7 @@
         type="button"
         class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border-transparent disabled:opacity-50 disabled:pointer-events-none"
       >
+      <span class="text-white">{{datosSeguridadDetalle.nombreusuario}} {{datosSeguridadDetalle.apellido}}</span>
         <mat-icon class="mat-18 text-white">person</mat-icon>
       </button>
       <button
