--- a/src/app/Ui/Modules/AJUSTES-INVENTARIO/page/lista-inventarios-ajuste-page/lista-inventarios-ajuste-page.component.html
+++ b/src/app/Ui/Modules/AJUSTES-INVENTARIO/page/lista-inventarios-ajuste-page/lista-inventarios-ajuste-page.component.html
@@ -30,3 +30,197 @@
   </nav>
 </header>
 <!-- ========== END - HEADER ========== -->
+
+
+<!-- ========== START - TABLA ========== -->
+<div class="w-full lg:ps-64">
+  <div class="w-full lg:ps-0">
+    <div class="px-4 sm:px-4 sm:pt-4 space-y-4 sm:space-y-2">
+      <!-- =================================================================================== -->
+      <!-- Apartado filtros -->
+      <!-- =================================================================================== -->
+      <div class="max-w-[100rem] py-2 lg:py-0 mx-auto">
+        <mat-form-field class="w-[20rem]">
+          <mat-label>Buscar inventario</mat-label>
+          <input
+            matInput
+            (keyup)="applyFilter($event)"
+            placeholder="Ingresar descripción"
+            #input
+          />
+        </mat-form-field>
+      </div>
+
+      <section>
+        <div class="max-w-[100rem] py-2 lg:py-2 mx-auto">
+          <div class="flex flex-col">
+            <div class="-m-1.5 overflow-x-auto">
+              <div class="p-1.5 min-w-full inline-block align-middle">
+                <div
+                  class="bg-white border border-gray-200 rounded-xl shadow-sm overflow-hidden"
+                >
+                  <div class="mat-elevation-z8">
+                    <table mat-table [dataSource]="dataSource" matSort (matSortChange)="announceSortChange($event)">
+                      <!-- =================================================================================== -->
+                      <!-- Fecha inventariado -->
+                      <!-- =================================================================================== -->
+                      <ng-container matColumnDef="fechamodificacion">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                          F. inventariado
+                        </th>
+                        <td mat-cell *matCellDef="let row">
+                          <button
+                            class="fecharegistro px-1 py-3 flex gap-2 align-center"
+                          >
+                            <span
+                              class="text-sm text-gray-600 dark:text-neutral-400"
+                            >
+                              {{
+                                row.fechacreacion
+                                  ? (row.fechacreacion | date : "dd/MM/yyyy")
+                                  : "-"
+                              }}
+                            </span>
+                          </button>
+                        </td>
+                      </ng-container>
+
+                      <!-- =================================================================================== -->
+                      <!-- Descripción -->
+                      <!-- =================================================================================== -->
+                      <ng-container matColumnDef="descripcion">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                          Descripción
+                        </th>
+                        <td mat-cell *matCellDef="let row">
+
+                          <button class="px-6 py-3  flex gap-2 text-left" type="button" >
+                            <!-- data-bs-toggle="offcanvas" data-bs-target="#detalledashboard" aria-controls="staticBackdrop"-->
+                            <span
+                              class="text-sm text-gray-600 text-left"
+                            >
+                              {{
+                                row.descripcion.toUpperCase() ||
+                                  "- sin nombre -"
+                              }}
+                            </span>
+                          </button>
+                        </td>
+                      </ng-container>
+
+                      <!-- =================================================================================== -->
+                      <!-- Cantidad datos inventario-->
+                      <!-- =================================================================================== -->
+                      <ng-container matColumnDef="totalregistros">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                          Cant. ítems
+                        </th>
+                        <td mat-cell *matCellDef="let row">
+                          <div class="flex justify-end">
+                            <span
+                            class="py-1 text-sm inline-flex items-center gap-x-1  font-medium  text-gray-600 rounded-full"
+                          >
+                          {{ row.totalregistros || "-" }}
+                          </span>
+                          </div>
+
+                        </td>
+                      </ng-container>
+
+                      <!-- =================================================================================== -->
+                      <!-- Usuario -->
+                      <!-- =================================================================================== -->
+                      <ng-container matColumnDef="UsuarioAsignado">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                          Asignado
+                        </th>
+                        <td mat-cell *matCellDef="let row">
+                          <button
+                            class="usuariocreador"
+                            class="px-6 py-3 flex gap-2 align-center"
+                          >
+
+                            <span
+                              class="text-sm text-gray-600 dark:text-neutral-400"
+                            >
+                              {{ row.UsuarioAsignado.toUpperCase() }}
+                            </span>
+                          </button>
+                        </td>
+                      </ng-container>
+
+                      <!-- =================================================================================== -->
+                      <!-- Estado -->
+                      <!-- =================================================================================== -->
+                      <!-- <ng-container matColumnDef="estado">
+                        <th mat-header-cell *matHeaderCellDef >
+                          Estado
+                        </th>
+                        <td mat-cell *matCellDef="let row">
+                          @if (row.estado == "1") {
+                          <td-estado-1 />
+                          } @if (row.estado == "2") {
+                          <td-estado-2 estado="'Inventariado'" />
+                          } @if (row.estado == "0") {
+                          <td-estado-3 [estado]="'Anulado'" />
+                          }
+                        </td>
+                      </ng-container> -->
+
+                      <!-- =================================================================================== -->
+                      <!-- Detalle -->
+                      <!-- =================================================================================== -->
+                      <ng-container matColumnDef="opciones">
+                        <th mat-header-cell *matHeaderCellDef>
+                          Detalle
+                        </th>
+                        <td mat-cell *matCellDef="let row">
+                          <div class="px-1 py-3">
+                            <button
+                              (click)="
+                                inventarioSeleccionadoPDF(
+                                  row.rucempresa,
+                                  row.idcarga
+                                )
+                              "
+                              class=" detalle btn py-2 px-3 inline-flex items-center gap-x-2 text-xs rounded-lg bg-white text-gray-800 hover:shadow-sm hover:bg-gray-50 focus:outline-none focus:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none"
+                              type="button"
+                              data-bs-toggle="offcanvas"
+                              data-bs-target="#disenoreporte"
+                              aria-controls="offcanvasRight"
+                            >
+                              <mat-icon class="icon-color-descargar"
+                                >visibility</mat-icon
+                              >
+                            </button>
+                          </div>
+                        </td>
+                      </ng-container>
+
+                      <tr
+                        mat-header-row
+                        *matHeaderRowDef="displayedColumns"
+                      ></tr>
+                      <tr
+                        mat-row
+                        *matRowDef="let row; columns: displayedColumns"
+                      ></tr>
+                    </table>
+
+                    <mat-paginator
+                      [pageSizeOptions]="[5, 10, 15, 20]"
+                      showFirstLastButtons
+                      aria-label="Select page of periodic elements"
+                    >
+                    </mat-paginator>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
+  </div>
+</div>
+<!-- ========== END - TABLA ========== -->
