05_03_2025 ICON BUTTON CERRAR AJUSTE INVENTARIO DETALLE

--- a/src/app/Ui/Modules/AJUSTES-INVENTARIO/page/detalle-inventario-ajustes-page/detalle-inventario-ajustes-page.component.html
+++ b/src/app/Ui/Modules/AJUSTES-INVENTARIO/page/detalle-inventario-ajustes-page/detalle-inventario-ajustes-page.component.html
@@ -20,17 +20,18 @@
             >
               <div class="flex justify-between w-full">
                 <div class="flex items-center justify-center gap-4">
-                  <button
-                  class="text-gray-800 hover:text-gray-600 "
-                  data-bs-toggle="offcanvas"
-                  data-bs-target="#disenoreporte"
-                  aria-controls="offcanvasRight"
-                >
-                  <mat-icon>chevron_left</mat-icon>
 
-                </button>
                 <h1 class="mb-2">Detalle ajustes</h1>
                 </div>
+                <button
+                class="text-gray-800 hover:text-gray-600 "
+                data-bs-toggle="offcanvas"
+                data-bs-target="#disenoreporte"
+                aria-controls="offcanvasRight"
+              >
+                <mat-icon>close</mat-icon>
+
+              </button>
               </div>
             </div>
           </div>
