--- a/src/app/Ui/Modules/AJUSTES-INVENTARIO/page/detalle-inventario-ajustes-page/detalle-inventario-ajustes-page.component.html
+++ b/src/app/Ui/Modules/AJUSTES-INVENTARIO/page/detalle-inventario-ajustes-page/detalle-inventario-ajustes-page.component.html
@@ -2,7 +2,7 @@
 <div
   class="offcanvas offcanvas-end ancho first-offcanvas"
   tabindex="-1"
-  id="disenoajustesdata"
+  id="disenoajustes"
 >
   <div class="offcanvas-header bg-[#f1f3f5] pb-1">
     <div
@@ -40,6 +40,7 @@
     </div>
   </div>
   <div class="offcanvas-body pt-1 h-full overflow-hidden flex flex-col">
+
 
     <tabla-ajustes-inventario-datos [listaProductos]="detalleProductos" [inventarioSeleccionado]="citaSeleccionada" />
 
