06_03_2025 INFORMACIÓN AJUSTADOS MOSTRANDOSE BIEN EN REPORTES

--- a/src/app/Ui/Modules/AJUSTES-INVENTARIO/components/tabla-ajustes-inventario-datos/tabla-ajustes-inventario-datos.component.html
+++ b/src/app/Ui/Modules/AJUSTES-INVENTARIO/components/tabla-ajustes-inventario-datos/tabla-ajustes-inventario-datos.component.html
@@ -17,14 +17,14 @@
 </div>
 
 <!-- Botón de Guardar -->
-<div class="flex justify-end mt-4">
+<div class="max-w-[100rem] py-6 lg:py-4 mx-auto h-auto overflow-auto max-h-[72vh]">
   <button mat-raised-button color="primary" (click)="guardarAjustes()">
     Guardar Ajustes
   </button>
 </div>
 <section>
   <div
-    class="max-w-[100vw] py-6 lg:py-4 mx-auto h-auto overflow-auto max-h-[72vh]"
+    class="max-w-[100rem] py-6 lg:py-4 mx-auto h-auto overflow-auto max-h-[72vh]"
   >
     <div class="flex flex-col">
       <div class="-m-1.5 overflow-x-auto">
