--- a/src/app/Ui/Modules/reportes/reports/reporte-inventario/reporte-inventario.component.html
+++ b/src/app/Ui/Modules/reportes/reports/reporte-inventario/reporte-inventario.component.html
@@ -232,6 +232,7 @@
   [RegistrosNoFaltantes]="RegistrosNoFaltantes"
   [NuevosRegistros]="NuevosRegistros"
   [ConteosExactos]="ConteosExactos"
+  [ItemsAjustados]="cantidadItemsAjustados"
 />
 
 <detalle-carga-inventarios
