--- a/src/app/Ui/Modules/reportes/components/design-reporte/design-page/desing-page-tabla-ajustados/desing-page-tabla-ajustados.component.html
+++ b/src/app/Ui/Modules/reportes/components/design-reporte/design-page/desing-page-tabla-ajustados/desing-page-tabla-ajustados.component.html
@@ -149,7 +149,7 @@
     </ng-container>
 
     <!-- =================================================================================== -->
-    <!-- Rack -->
+    <!-- Ajuste -->
     <!-- =================================================================================== -->
     <ng-container matColumnDef="ajuste">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Ajuste</th>
