06_03_2025 MOSTRAR VISUALMENTE (SIN ACTUALIZAR EN LA BD) LOS REPORTES AJUSTADOS Y SIN AJUSTAR

--- a/src/app/Ui/Modules/reportes/components/design-reporte/design-page/design-page-tabla-datos/design-page-tabla-datos.component.html
+++ b/src/app/Ui/Modules/reportes/components/design-reporte/design-page/design-page-tabla-datos/design-page-tabla-datos.component.html
@@ -142,7 +142,7 @@
           ' text-gray-600': row.stockresultante == 0,
         }"
           >
-            {{ row.stockresultante }}
+            {{ row.stockF - row.stockL}}
           </span>
         </button>
       </td>
